updated the heading of my index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1> The News Times</h1>
+    <h1> The Nations v2.0</h1>
     <section class="Flex-container">
 <article class="article-1"> <h2 class="h2-1">Student Learn HTML </h2>
     <p>
